--- a/src/Interfaces/jfProductos.form
+++ b/src/Interfaces/jfProductos.form
@@ -327,7 +327,7 @@
             <Component class="javax.swing.JButton" name="btnActualizar">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/Iconos/actualizar.png"/>
+                  <Image iconType="3" name="/Iconos/actualizar_DV.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="ACTUALIZAR"/>
                 <Property name="horizontalTextPosition" type="int" value="4"/>
